--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <div class="noticias">
 
-    <h1>Noticias Recentes</h1>
+    <h1>Notícias Recentes</h1>
 
 
     <div class="imagem">
@@ -70,6 +70,11 @@
         <div class="header-statics">07 de Dezembro, 2021<br>Processo Seletivo Residência Médica SPB 2022</div>
 
     </div><!--imagem-->
+
+    <div class="imagem">
+        <div class="header-statics">07 de Dezembro, 2021<br>Processo Seletivo Residência Médica SPB 2022</div>
+
+    </div><!--imagem--> 
 
     <div class="imagem">
         <div class="header-statics">07 de Dezembro, 2021<br>Processo Seletivo Residência Médica SPB 2022</div>
