Add Parceiros da AngioCorpore

--- a/institucional.html
+++ b/institucional.html
@@ -86,6 +86,22 @@
 
     </div><!--box-->
 </div><!--sobre-->
+
+<div class="parceiros">
+
+    <h1>ANGIOCORPORE E SEUS PARCEIROS</h1>
+
+    <div class="imagens">
+        <img src="images/parceiros/partner_bene.jpg">
+        <img src="images/parceiros/partner_clinica.jpg">
+        <img src="images/parceiros/partner_medinter.jpg">
+        <img src="images/parceiros/partner_menzen.jpg">
+        <img src="images/parceiros/partner_nucleomed.jpg">
+        <img src="images/parceiros/partner_philips.jpg">
+        <img src="images/parceiros/partner_siemens.jpg">
+    </div><!--imagens-->
+
+</div><!--parceiros-->
     
 
 
