--- a/convenios.html
+++ b/convenios.html
@@ -70,8 +70,8 @@
 
     <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Filtrar Convênios">
 
-    <ul id="myUL">
-        
+    <div id="box">
+
         <li><a href="https://www.abrasa.org.br/" target="blank"">ABRASA</a></li>
         <li><a href="https://www.afresp.org.br/" target="blank">AFRESP</a></li>
         <li><a href="https://www.allianz.com.br/Saude" target="blank">ALLIANZ</a></li>
@@ -121,7 +121,7 @@
         <li><a href="http://www.angiocorpore.com.br" target="blank">VERTHO</a></li>
 
 
-    </div><!--lista-->
+    </div>
 
 
 </div><!--convenios-->
